syntax = "proto3";

option csharp_namespace = "Kmanual";

//package repository;

service Projects {
  rpc GetList (GetListRequest) returns (GetListResponse);
  rpc Create (CreateReuqest) returns (CreateResponse);
}

message CreateReuqest {
  string name = 1;
  string image = 2;
  optional string tag = 3;
  string service = 4;
  optional string namespace = 5;
}

message CreateResponse {
  Project project = 1;
}

message GetListRequest {

}

message GetListResponse {
  repeated Project projects = 1;
}

message Project {
  string id = 1;
  string name = 2;
  string image = 3;
  optional string tag = 4;
  string service = 5;
  optional string namespace = 6;
}